examples/test/testpolicy1506.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1506
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key16: value28
      key21: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value0
          key5: value2
          key12: value4
      podSelector:
        matchLabels:
          key39: value42
          key33: value25
